--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                             <i class="bi bi-mailbox2"></i> <a
                                 href="mailto:wanghongsheng@zju.edu.cn">wanghongsheng@zju.edu.cn</a> <br>
                             <i>Zhejiang University Young Professor</i><br>
-                            <i>The founder of Wending Hongru</i>
+                            <i>The founder of Wending Hongru</i><br>
                             <i>The founder & CEO of CloCoder</i>
                         </p>
                     </td>
