--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                             <i class="bi bi-mailbox2"></i> <a
                                 href="mailto:wanghongsheng@zju.edu.cn">wanghongsheng@zju.edu.cn</a> <br>
                             <i>Zhejiang University Young Professor</i><br>
-                            <i>The founder of Wending Hongru</i><br>
+                            <i>The founder of Wending Hongru</i>
                             <i>The founder & CEO of CloCoder</i>
                         </p>
                     </td>
@@ -84,10 +84,7 @@
                         Liao</a>)</li>
             </p>
             <p>
-                <li>Published nearly 20 papers in top conferences (OSDI, EuroSys, CVPR, ECCV, ACM MM)</li>
-            </p>
-            <p>
-                <li>Program committee member for ECCV2022, ACM MM 2022</li>
+                <li>Published nearly 20 papers in top conferences</li>
             </p>
             <p>
                 <li>Holds <strong>53 granted Chinese Patents</strong>, <strong>20 US PCT Patents</strong>, and
@@ -98,7 +95,7 @@
         </ul>
         <h2>Current Publication</h2>
 
-        <ul>
+        <ol>
             <li>
                 <a href="https://arxiv.org/abs/2405.12505">NOVA-3D: Non-overlapped Views for 3D Anime Character
                     Reconstruction</a><br><strong>Wang, Hongsheng</strong> and Yao, Nanjie and Zhou, Xinrui and Zhang, Shengyu and Xu,
@@ -110,7 +107,16 @@
             <li><a href="https://arxiv.org/abs/2405.12806">MOSS: Motion-based 3D Clothed Human Synthesis from Monocular Video</a><br><strong>Wang, Hongsheng</strong>, Xiang Cai, Xi Sun, Jinhong Yue, Zhanyun Tang, Shengyu Zhang, Feng Lin, Fei Wu<br>Arxiv, 2024</li>
             <li><a href="https://arxiv.org/abs/2405.13097">NieR: Normal-Based Lighting Scene Rendering</a><br><strong>Wang, Hongsheng</strong>, Yang Wang, Yalan Liu, Fayuan Hu, Shengyu Zhang, Fei Wu, Feng Lin<br>Arxiv, 2024</li>
             <li><a href="https://arxiv.org/abs/2405.12724">RemoCap: Disentangled Representation Learning for Motion Capture</a><br><strong>Wang, Hongsheng</strong>, Lizao Zhang, Zhangnan Zhong, Shuolin Xu, Xinrui Zhou, Shengyu Zhang, Huahao Xu, Fei Wu, Feng Lin<br>Arxiv, 2024</li>
-        </ul>
+            <li><a href="https://www.spiedigitallibrary.org/conference-proceedings-of-spie/13164/131642U/RehabGPT--a-MaaS-based-solution-to-large-model-building/10.1117/12.3019532.short">RehabGPT: a MaaS-based solution to large model building for digital rehabilitation</a><br><strong>Hongsheng Wang</strong>, Lin Feng<br>International Workshop on Advanced Imaging Technology (IWAIT) 2024</li>
+            <li><a href="https://openreview.net/forum?id=1GdAJ3GsOw">DISTPAR: TENSOR PARTITIONING FOR DISTRIBUTED NEURAL NETWORK COMPUTING</a><br>Hongsheng Wang, Jinhui Yuan, Shun Liu, Weijie Xia, Xinyi Zhou, Shengyu Zhang, Fei Wu, Mohamed Jaward Bah, Feng Lin<br>ISCA, 2024</li>
+            <li><a href="https://ieeexplore.ieee.org/abstract/document/9967710">A Cooperative Flow Simulator for Distributed Computing Based on Full-Dimensional Definable Network</a><br>Yuan Liang, <strong>Hongsheng Wang</strong>4th International Conference on Data-driven Optimization of Complex Systems (DOCS), 2024</li>
+            <li><a href="https://ieeexplore.ieee.org/abstract/document/9901868">AutoDistiller: An Automatic Compression Method for Multi-task Language Models</a><br><strong>Wang, Hongsheng</strong>,  Geyang Xiao, and Yuan Liang<br>41st Chinese Control Conference (CCC), 2022</li>
+            <li><a href="https://link.springer.com/chapter/10.1007/978-3-030-31456-9_54">Similarity Scores Based Re-classification for Open-Set Person Re-identification</a><br><strong>Wang, Hongsheng</strong>, Yang Yang, Zhen Lei<br>Chinese Conference on Biometric Recognition-14th, {CCBR}, 2019</li>
+            <li><a href="https://ieeexplore.ieee.org/abstract/document/8622014">Is Re-ranking Useful for Open-set Person Re-identification?</a><br><strong>Hongsheng Wang</strong>, Zhen Lei<br>2018 IEEE International Conference on Big Data (Big Data), 2018</li>
+            <li><a href="https://ieeexplore.ieee.org/abstract/document/8622014/">Is Re-ranking Useful for Open-set Person Re-identification?</a><br><strong>Wang, Hongsheng</strong>, Shengcai Liao, Zhen Lei<br>2018 IEEE International Conference on Big Data (Big Data), 2018</li>
+            <li><a href="https://ieeexplore.ieee.org/abstract/document/8289496">Design of Transverse Field Sweeping System for W-band Gyrotron Collector</a><br><strong>Wang, Hongsheng</strong> and Zhihui Geng<br>International Vacuum Electronics Conference {IVEC}, 2017</li>
+            <li><a href="https://www.tandfonline.com/doi/abs/10.1080/09205071.2017.1348996">Simulation of transverse field sweeping system and thermal analysis of an undepreesed collector for a gyrotron</a><br>Yaru Wang, <strong>Hongsheng Wang</strong><br>Journal of Electromagnetic Waves and Applications, 2017</li>
+        </ol>
 
         <h2>Current Project</h2>
         <ul>
