--- a/index.html
+++ b/index.html
@@ -365,6 +365,16 @@
             </p>
         </ol>
 
+        <h2>Software copyrights</h2>
+        <ol>
+            <li>深度学习框架基于AI加速卡分布式训练的适配系统 V1.0</li>
+            <li>人工智能异构集群的深度学习编译系统 V1.0</li>
+            <li>基于深度学习的皮带输送机检测系统 V1.0</li>
+            <li>智能通信--基于GatewayWorker技术的自动巡检系统 V1.0</li>
+            <li>供需采购互联网平台v1.0</li>
+            <li>科学招聘互联网平台v1.0</li>       
+        </ol>
+
 
         <h2>Current Project</h2>
         <ul>
@@ -385,6 +395,7 @@
             </p>
 
         </ul>
+
 
         <h2>Additional Information</h2>
         <ul>
