--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                             <i class="bi bi-telephone-fill"></i> (+86) 198-5718-7601 <br>
                             <i class="bi bi-mailbox2"></i> <a
                                 href="mailto:wanghongsheng@zju.edu.cn">wanghongsheng@zju.edu.cn</a> <br>
-                            <i>Zhejiang University Young Professor</i><br>
+                            <i>Zhejiang University Assistant Professor</i><br>
                             <i>The founder of Wending Hongru</i><br>
                             <i>The founder & CEO of CloCoder</i>
                         </p>
@@ -52,7 +52,7 @@
 
         </ul>
 
-        <h2>Expertise</h2>
+        <h2>Expertises</h2>
         <ul>
             <p>
                 <li>Deep learning frameworks (<strong><a href="https://github.com/Oneflow-Inc/oneflow"
@@ -87,13 +87,13 @@
                 <li>Published nearly 20 papers in top conferences</li>
             </p>
             <p>
-                <li>Holds <strong>53 granted Chinese Patents</strong>, <strong>20 US PCT Patents</strong>, and
+                <li>Holds <strong>71 granted Chinese Patents</strong>, <strong>25 US PCT Patents</strong>, and
                     <strong>4 Japanese PCT Patents</strong>
                 </li>
             </p>
 
         </ul>
-        <h2>Current Publication</h2>
+        <h2>Current Publications</h2>
 
         <ol>
             <li>
@@ -144,9 +144,9 @@
                 Wang, <strong>Hongsheng Wang</strong><br>Journal of Electromagnetic Waves and Applications, 2017</li>
         </ol>
 
-        <h2>Patent</h2>
-        <h3>国产人工智能基础软件 & AI 加速</h3>
-        <h4>国家发明专利</h4>
+        <h2>Patents</h2>
+        <h3>AI Infra</h3>
+        <h4>Chinese Patents</h4>
         <ol>
             <p>
                 <li>基于统一后端引擎的深度学习框架与硬件设备适配方法. <strong>王宏升</strong>, 鲍虎军 (2021114080054)</li>
@@ -198,7 +198,7 @@
 
         </ol>
 
-        <h4>美国 PCT 发明专利</h4>
+        <h4>US PCT Patents</h4>
         <ol>
             <p>
 
@@ -238,8 +238,8 @@
         <br>
 
 
-        <h3>大语言模型端侧部署</h3>
-        <h4>国家发明专利</h4>
+        <h3>Edge-Deployment for Vision-Language Models</h3>
+        <h4>Chinese Patents</h4>
         <ol>
             <p>
                 <li>一种基于域-不变特征的元-知识微调方法及平台. <strong>王宏升</strong> (2021100372377)</li>
@@ -251,7 +251,7 @@
 
         </ol>
 
-        <h4>美国 PCT 发明专利</h4>
+        <h4>US PCT Patents</h4>
         <ol>
             <p>
 
@@ -268,7 +268,7 @@
             </p>
         </ol>
 
-        <h4>日本 PCT 发明专利</h4>
+        <h4>Japan PCT Patents</h4>
         <ol>
             <p>
 
@@ -284,8 +284,8 @@
 
 
 
-        <h3>三维模型重建与生成</h3>
-        <h4>国家发明专利</h4>
+        <h3>3D Human reconstruction</h3>
+        <h4>Chinese Patents</h4>
         <ol>
             <p>
                 <li>一种长短时特征引导的人体康复运动视频数据生成方法. <strong>王宏升</strong>, 林峰 (ZL202410281162.0)</li>
@@ -317,7 +317,7 @@
 
         </ol>
 
-        <h4>美国 PCT 发明专利</h4>
+        <h4>US PCT Patents</h4>
         <ol>
             <p>
 
@@ -330,8 +330,8 @@
         <br>
 
 
-        <h3>智能数据分析与建模</h3>
-        <h4>国家发明专利</h4>
+        <h3>Intelligent Modeling</h3>
+        <h4>Chinese Patents</h4>
         <ol>
             <p>
                 <li>一种用于法律文书的命名实体识别的标注方法和装置. <strong>王宏升</strong>, 鲍虎军 (2022104347379)</li>
@@ -348,7 +348,7 @@
 
         </ol>
 
-        <h4>美国 PCT 发明专利</h4>
+        <h4>US PCT Patents</h4>
         <ol>
             <p>
 
@@ -376,7 +376,7 @@
         </ol>
 
 
-        <h2>Current Project</h2>
+        <h2>Current Projects</h2>
         <ul>
             <p>
                 <li>
