--- a/index.html
+++ b/index.html
@@ -97,6 +97,11 @@
 
         <ol>
             <li>
+                A Novel Multimodal Deep Probabilistic Generative Model for De novo Design of Antimicrobial Peptides with
+                    Desired Antibacterial Activities</a><br><strong>Wang, Hongsheng</strong> and Tang, Zhanyun and Li Jing, Zeng, Zihan and Zhang, Shengyu and Huang, Xingxu and Wu, Fei and Lin, Feng<br>, 2024
+            </li>
+
+            <li>
                 <a href="https://arxiv.org/abs/2405.12505">NOVA-3D: Non-overlapped Views for 3D Anime Character
                     Reconstruction</a><br><strong>Wang, Hongsheng</strong> and Yao, Nanjie and Zhou, Xinrui and Zhang,
                 Shengyu and Xu,
@@ -126,7 +131,8 @@
             <li><a href="https://ieeexplore.ieee.org/abstract/document/9967710">A Cooperative Flow Simulator for
                     Distributed Computing Based on Full-Dimensional Definable Network</a><br>Yuan Liang,
                 <strong>Hongsheng Wang</strong><br>4th International Conference on Data-driven Optimization of Complex
-                Systems (DOCS), 2024</li>
+                Systems (DOCS), 2024
+            </li>
             <li><a href="https://ieeexplore.ieee.org/abstract/document/9901868">AutoDistiller: An Automatic Compression
                     Method for Multi-task Language Models</a><br><strong>Wang, Hongsheng</strong>, Geyang Xiao, and Yuan
                 Liang<br>41st Chinese Control Conference (CCC), 2022</li>
@@ -210,28 +216,37 @@
                     APPARATUS THEREOF. <strong>王宏升</strong>, 鲍虎军 (17/714,454 美国)</li>
 
                 <li>METHOD FOR EXECUTION OF COMPUTATIONAL GRAPH IN NEURAL NETWORK MODEL AND APPARATUS THEREOF.
-                    <strong>王宏升</strong>, 鲍虎军 (17/706,734 美国)</li>
+                    <strong>王宏升</strong>, 鲍虎军 (17/706,734 美国)
+                </li>
 
-                <li>Method and Apparatus of Executing Dynamic Graph for Neural Network Computation. <strong>王宏升</strong>, 鲍虎军
+                <li>Method and Apparatus of Executing Dynamic Graph for Neural Network Computation.
+                    <strong>王宏升</strong>, 鲍虎军
                     (17/833,088 - 美国)</li>
                 <li>PIPELINING AND PARALLELIZING GRAPH EXECUTION METHOD FOR NEURAL NETWORK MODEL COMPUTATION AND
                     APPARATUS THEREOF. <strong>王宏升</strong>, 鲍虎军 (17/838,342 - 美国)</li>
                 <li>NEURAL NETWORK COMPUTING-ORIENTED MODELING METHOD AND APPARATUS FOR DISTRIBUTED DATA
                     ROUTING. <strong>王宏升</strong>, 鲍虎军 (17/848,048 - 美国)</li>
-                <li>Graph Optimization Method and Apparatus for Neural Network Computation. <strong>王宏升</strong> (17/950,028 -
+                <li>Graph Optimization Method and Apparatus for Neural Network Computation. <strong>王宏升</strong>
+                    (17/950,028 -
                     美国)
                 </li>
-                <li>Data Flow Method and Apparatus for Neural Network Computation. <strong>王宏升</strong> (17/954,109)</li>
-                <li>MEMORY OPTIMIZATION METHOD AND DEVICE ORIENTED TO NEURAL NETWORK COMPUTING. <strong>王宏升</strong> (18/072,969
+                <li>Data Flow Method and Apparatus for Neural Network Computation. <strong>王宏升</strong> (17/954,109)
+                </li>
+                <li>MEMORY OPTIMIZATION METHOD AND DEVICE ORIENTED TO NEURAL NETWORK COMPUTING. <strong>王宏升</strong>
+                    (18/072,969
                     - 美国)</li>
-                <li>OPTIMIZATION METHOD AND APPARATUS FOR COMPILING COMPUTATION GRAPH. <strong>王宏升</strong> (17/992,814)</li>
-                <li>Intermediate Representation Method and Apparatus for Compiling Computation Graphs. <strong>王宏升</strong>
+                <li>OPTIMIZATION METHOD AND APPARATUS FOR COMPILING COMPUTATION GRAPH. <strong>王宏升</strong> (17/992,814)
+                </li>
+                <li>Intermediate Representation Method and Apparatus for Compiling Computation Graphs.
+                    <strong>王宏升</strong>
                     (18/071,958 - 美国)</li>
-                <li>Memory Optimization Method and Apparatus for Neural Network Compilation. <strong>王宏升</strong> (17/992,822)
+                <li>Memory Optimization Method and Apparatus for Neural Network Compilation. <strong>王宏升</strong>
+                    (17/992,822)
                 </li>
                 <li>Intermediate Representation Method and Apparatus for Parallel Execution of Graph
                     Computation. <strong>王宏升</strong> (17/992,830 - 美国)</li>
-                <li>Instruction Execution Method and Apparatus for Graph Computation. <strong>王宏升</strong> (18/071,978 - 美国)</li>
+                <li>Instruction Execution Method and Apparatus for Graph Computation. <strong>王宏升</strong> (18/071,978 -
+                    美国)</li>
             </p>
 
         </ol>
@@ -263,7 +278,8 @@
                     KNOWLEDGE DISTILLATION. <strong>王宏升</strong> (17/555,535)</li>
                 <li>METHOD FOR AUTOMATICALLY COMPRESSING MULTITASK-ORIENTED PRE-TRAINED LANGUAGE MODEL AND
                     PLATFORM THEREOF. <strong>王宏升</strong> (17/564,071)</li>
-                <li>METHOD AND PLATFORM FOR META-KNOWLEDGE FINE-TUNING BASED ON DOMAIN-INVARIANT FEATURES. <strong>王宏升</strong>
+                <li>METHOD AND PLATFORM FOR META-KNOWLEDGE FINE-TUNING BASED ON DOMAIN-INVARIANT FEATURES.
+                    <strong>王宏升</strong>
                     (17/674,859)</li>
             </p>
         </ol>
@@ -352,27 +368,33 @@
         <ol>
             <p>
 
-                <li>Labeling Method and Apparatus for Named Entity Recognition of Legal Instrument. <strong>王宏升</strong>, 鲍虎军
+                <li>Labeling Method and Apparatus for Named Entity Recognition of Legal Instrument.
+                    <strong>王宏升</strong>, 鲍虎军
                     (17/830,786 - 美国)</li>
                 <li>Semi-Supervised Method and Apparatus for Public Opinion Text Analysis. <strong>王宏升</strong>, 鲍虎军
                     (17/837,233
                     - 美国)</li>
 
-                <li>Pedestrian Re-Identification Method and Apparatus Based on Local Feature Attention. <strong>王宏升</strong>
+                <li>Pedestrian Re-Identification Method and Apparatus Based on Local Feature Attention.
+                    <strong>王宏升</strong>
                     (17/954,129 - 美国)</li>
-                <li>Joint Modeling Method and Apparatus for Enhancing Local Features of Pedestrians. <strong>王宏升</strong>
+                <li>Joint Modeling Method and Apparatus for Enhancing Local Features of Pedestrians.
+                    <strong>王宏升</strong>
                     (18/072,002 - 美国)</li>
             </p>
         </ol>
 
         <h2>Software copyrights</h2>
         <ol>
-            <li>深度学习框架基于AI加速卡分布式训练的适配系统 V1.0</li>
-            <li>人工智能异构集群的深度学习编译系统 V1.0</li>
-            <li>基于深度学习的皮带输送机检测系统 V1.0</li>
-            <li>智能通信--基于GatewayWorker技术的自动巡检系统 V1.0</li>
-            <li>供需采购互联网平台v1.0</li>
-            <li>科学招聘互联网平台v1.0</li>       
+            <li>深度学习框架基于AI加速卡分布式训练的适配系统 V1.0，登记号 2023SR0519476</li>
+            <li>人工智能异构集群的深度学习编译系统 V1.0，登记号 2023SR0519477</li>
+            <li>可视化建模系统 V1.0，登记号 2022SR1368816</li>
+            <li>可拖拽工作流构建系统 V1.0，登记号 2022SR1561817</li>
+            <li>模型池管理系统 V1.0，登记号 2022SR1561818</li>
+            <li>基于深度学习的皮带输送机检测系统 V1.0，登记号 2022SR0563763</li>
+            <li>智能通信--基于GatewayWorker技术的自动巡检系统 V1.0，登记号 2022SR0563803</li>
+            <li>供需采购互联网平台v1.0，登记号 2022SR1440521</li>
+            <li>科学招聘互联网平台v1.0，登记号 2022SR1444661</li>
         </ol>
 
 
