--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                 <li>一种用于图计算并行执行的中间表示方法及装置. <strong>王宏升</strong> (PCT/CN2022/124004)</li>
                 <li>一种用于图计算的指令执行方法及装置. <strong>王宏升</strong> (PCT/CN2022/124006)</li>
 
-                <li>一种分布式通信系统及方法. <strong>王宏升</strong>,, 林峰, 吴飞 (ZL202310561547.8)</li>
+                <li>一种分布式通信系统及方法. <strong>王宏升</strong>,林峰, 吴飞 (ZL202310561547.8)</li>
                 <li>一种任务执行的方法、装置、存储介质及电子设备. <strong>王宏升</strong>, 吴飞, 林峰 (ZL202310724767.8)</li>
                 <li>一种分布式模型编译系统、方法、装置、介质及设备. <strong>王宏升</strong>, 吴飞, 林峰 (ZL202310727219.0)</li>
                 <li>一种模型训练的方法、装置、存储介质及电子设备. <strong>王宏升</strong> (ZL202310435496.4)</li>
@@ -194,7 +194,7 @@
                 <li>一种模型部署的方法、系统、存储介质及电子设备. <strong>王宏升</strong> (ZL202310413623.0)</li>
                 <li>一种任务执行系统、方法、存储介质及电子设备. <strong>王宏升</strong> (ZL202310439553.6)</li>
                 <li>一种芯片管理系统、方法、设备及存储介质. <strong>王宏升</strong> (ZL202310427390.X)</li>
-                <li>一种硬件加速方法、装置、存储介质及电子设备. <strong>王宏升</strong>, (ZL202310363658.8)</li>
+                <li>一种硬件加速方法、装置、存储介质及电子设备. <strong>王宏升</strong> (ZL202310363658.8)</li>
                 <li>一种基于硬件特性的数据处理的方法及装置. <strong>王宏升</strong>, 林峰 (ZL202310199473.8)</li>
                 <li>一种数据处理的方法、装置、存储介质及电子设备. <strong>王宏升</strong> (ZL202310216915.5)</li>
                 <li>一种确定目标模型的方法、装置、存储介质及设备. <strong>王宏升</strong> (ZL202310212123.0)</li>
